k8s/prod/dex/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: dex
  labels:
    name: dex
